--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="box">
         <header>
-            <h1>Calculater</h1>
+            <h1>Calculator</h1>
         </header>
         <section class="input">
             <input type="text" name="" id="input" disabled>
