--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
            
                 <span id="clear">C</span>
                 <span class="span">-</span>
-                <span class="span">*</span>
+                <span class="span" id="multi">×</span>
                            <span class="span">+</span>
                 <span class="span">9</span>
                 <span class="span">8</span>
