--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
             <h1>Calculator</h1>
         </header>
         <section class="input">
-            <input type="text" name="" id="input" disabled>
+            <input type="text" name="" id="input" readonly>
         </section>
         <section class="num">
            
                 <span id="clear">Ac</span>
                 <span class="span">%</span>
                 <span  id="back">⌫</span>
-                           <span class="span">/</span>
+                           <span class="span">÷</span>
                 <span class="span">9</span>
                 <span class="span">8</span>
                 <span class="span">7</span>
